<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalenderFragment">

    <LinearLayout
        android:layout_gravity="clip_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Toolbar-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarCalender"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <!--Content-->
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/date"
                        android:textSize="@dimen/h5"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail"
                    android:textSize="@dimen/h5"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d1"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e1"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d2"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e2"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d3"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e3"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d4"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e4"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d5"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e5"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d6"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e6"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d7"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e7"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d8"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e8"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d9"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e9"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d10"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e10"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="30dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d11"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e11"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="43dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d12"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e12"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d13"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e13"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="100dp"
                    android:layout_height="40dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/d14"
                        android:textSize="@dimen/h3"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e14"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"/>

            </LinearLayout>

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/d15"
                    android:textSize="@dimen/h3"
                    android:layout_gravity="center"
                    android:gravity="center"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e15"
                android:textSize="@dimen/h3"
                android:layout_gravity="center"/>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>