<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFragment">



    <LinearLayout
        android:layout_gravity="clip_vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--Toolbar-->
        <android.support.v7.widget.Toolbar
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/toolbarMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary" />


        <ImageView
            android:src="@drawable/menu"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button

                android:layout_width="10dp"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:cursorVisible="false"/>
            <Button
                android:text="@string/message"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="4" />
            <Button
                android:text="@string/message"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="4" />


            <Button

                android:layout_width="10dp"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:cursorVisible="false"/>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:layout_width="10dp"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:cursorVisible="false"/>
            <Button
                android:text="@string/event"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="4" />


            <Button
                android:text="@string/investigate"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="4"/>
            <Button

                android:layout_width="10dp"
                android:layout_height="120dp"
                android:layout_weight="4"
                android:cursorVisible="false"/>




        </LinearLayout>





    </LinearLayout>

</FrameLayout>